# colab-editor-rs

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  index.html  package-lock.json  package.json  renovate.json  tailwind.config.js  test.txt
.github/workflows/: deploy-to-pages.yml  pr_check.yml
client/: Cargo.toml  Trunk.toml  index.html  inline_peer.js  package-lock.json  package.json
client/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
src/: app.rs  chat_component.rs  chat_service.rs  lib.rs  message_list.rs  utils.rs
src/chat/: chat_model.rs
src/chat/web_rtc_manager/: config.rs  connection_state.rs  error.rs  mod.rs
worker/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
worker/src/: index.ts
