[package]
name = "trunk-template"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2.84"
js-sys = "0.3.60"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22.1"
wasm-bindgen-futures = "0.4.45"
hmac-sha256 = "1.0.0"
hex = "0.4.2"
thiserror = "2.0.3"

[lib]
crate-type = ["cdylib"]

[dependencies.web-sys]
version = "0.3.72"
features = [
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
    'RtcAnswerOptions',
    'RtcCertificate',
    'RtcCertificateExpiration',
    'RtcCodecStats',
    'RtcConfiguration',
    'RtcDataChannel',
    'RtcDataChannelEvent',
    'RtcDataChannelEventInit',
    'RtcDataChannelInit',
    'RtcDataChannelState',
    'RtcFecParameters',
    'RtcIceCandidate',
    'RtcIceCandidateInit',
    'RtcIceCandidatePairStats',
    'RtcIceCandidateStats',
    'RtcIceComponentStats',
    'RtcIceServer',
    'RtcIdentityAssertion',
    'RtcIdentityAssertionResult',
    'RtcIdentityProvider',
    'RtcIdentityProviderDetails',
    'RtcIdentityProviderOptions',
    'RtcIdentityProviderRegistrar',
    'RtcIdentityValidationResult',
    'RtcInboundRtpStreamStats',
    'RtcMediaStreamStats',
    'RtcMediaStreamTrackStats',
    'RtcOfferAnswerOptions',
    'RtcOfferOptions',
    'RtcOutboundRtpStreamStats',
    'RtcPeerConnection',
    'RtcPeerConnectionIceEvent',
    'RtcPeerConnectionIceEventInit',
    'RtcRtcpParameters',
    'RtcRtpCodecParameters',
    'RtcRtpContributingSource',
    'RtcRtpEncodingParameters',
    'RtcRtpHeaderExtensionParameters',
    'RtcRtpParameters',
    'RtcRtpReceiver',
    'RtcRtpSender',
    'RtcRtpSourceEntry',
    'RtcRtpSynchronizationSource',
    'RtcRtpTransceiver',
    'RtcRtpTransceiverInit',
    'RtcRtxParameters',
    'RtcSessionDescription',
    'RtcSessionDescriptionInit',
    'RtcStats',
    'RtcStatsReport',
    'RtcStatsReportInternal',
    'RtcTrackEvent',
    'RtcTrackEventInit',
    'RtcTransportStats',
    'RtcIceConnectionState',
    'RtcIceGatheringState',
    'RtcSdpType',
    'RtcdtmfSender',
    'RtcdtmfToneChangeEvent',
    'RtcdtmfToneChangeEventInit',
    'RtcrtpContributingSourceStats',
    'HtmlDocument',
]
