[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
gloo = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
automerge = "0.7.2"
futures = "0.3"
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.3", features = ["wasm_js"] }
common = { path = "../common" }
js-sys = "0.3"
web-sys = "0.3"
