[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.23", features = ["csr"] }
wasm-bindgen = "0.2"
gloo = "0.12"
gloo-timers = { version = "0.4", features = ["futures"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
automerge = "0.9.0"
futures = "0.3"
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.4", features = ["wasm_js"] }
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
