[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.7", features = ["cors", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34"
automerge = "0.7.2"
futures = "0.3"
common = { path = "../common" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
